fix(legacy): textarea flickering when type space

--- a/projects/legacy/components/textarea/textarea.style.less
+++ b/projects/legacy/components/textarea/textarea.style.less
@@ -159,7 +159,7 @@
 }
 
 .t-pseudo-content {
-    white-space: pre-wrap;
+    white-space: break-spaces;
     overflow-wrap: break-word;
     word-break: keep-all;
     pointer-events: none;
